[package]
name = "astolfo_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12.4"
tokio = {version = "1", features = ["full"]}
reqwest = { version = "0.11", features = ["blocking", "json"] }
xml = "0.8.20"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
quick-xml = {version = "0.31", features = ["serialize"]}
regex = "1.11.1"
sqlx = {version="0.8.6",features=["runtime-tokio","sqlite","macros"]}
rand = "0.9.2"
